[1226] 11주차 스터디 서버 간 통신

--- a/actuator/src/main/resources/application.properties
+++ b/actuator/src/main/resources/application.properties
@@ -10,9 +10,9 @@ management.endpoints.jmx.exposure.include=*
 management.endpoints.jmx.exposure.exclude=threaddump, heapdump
 
 
-info.organization.name=dodam
-info.contact.email=dodam@naver.com
-info.contact.phoneNumber=010-1234-5678
+info.organization.name=Corner
+info.contact.email=1234@naver.com
+info.contact.phoneNumber=010-0000-1234
 
 
 management.endpoint.health.show-details=always
